# libmem

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cache.c  cache.h  hello-jnicallback.c
app/src/main/cpp/libnginx/: ngx_modules.c
app/src/main/cpp/libnginx/core/: ngx_config.h  ngx_palloc.c  ngx_palloc.h
app/src/main/cpp/libnginx/include/: ngx_auto_config.h  ngx_auto_headers.h
app/src/main/cpp/libnginx/os/unix/: glob.c  glob.h  ngx_alloc.c  ngx_alloc.h
app/src/main/java/com/example/hellojnicallback/: JniHandler.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
